Use Empty instead of Void in cohorts
Void is inherently null-happy, switch to Empty, which has a proper
value.

Change-Id: I6ce60a0933e15e7b779fcbef149481c59aa93970
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>